syntax = "proto3";

message Request {
  string user_name = 1;
  string pass_word = 2;
}

message Response {
  int32 code = 1;
  string msg = 2;
}

message ActionRequest {
  string user_id = 1;
  string item_id = 2;
  float rating = 3;
}

service UserService {
  rpc SignIn (Request) returns (Response);
  rpc SignUp (Request) returns (Response);
  rpc UserAction (ActionRequest) returns (Response);
}
